2006-08-07  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.9:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-08-03  Brian Cameron  <brian.cameron@sun.com>

	* daemon/slave.c: Remove calls to syslog/malloc that are called
	  from inside signal handlers, since they are not safe.  Patch
	  provided by Ray Strode <rstrode@redhat.com>.

2006-08-03  Ray Strode <rstrode@redhat.com>

	* configure.ac: look for /usr/bin/Xorg when searching for
	  X servers (bug 349836).

2006-08-03  Brian Cameron  <brian.cameron@sun.com>

	* config/gdm.conf.in, config/gdm.conf-custom: Improved comments
	  to make gdm.conf/custom.conf more clear.

2006-08-03  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter.c: Fix the setup of the iochannel so that
	  it happens after the face browser is set up.  The recent changes
	  Ray Strode made to make the message input nonblocking seemed
	  to break the Face Browser logic.  This patch makes sure that
	  the face browser is setup before setting up the iochannel.  The
	  face data is sent from the daemon to the slave along the same
	  channel, but these messages are not formatted like the other
	  messages.  Patch provided by Ray Strode <rstrode@redhat.com>.

2006-08-02  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Fix error message that gets printed when
	  you try to run GDM as non-root user.
	* gui/greeter/greeter_action_language.c,
	  gui/greeter/greeter_canvas_item.c,
	  gui/greeter/greeter_session.c,
	  gui/greeter/greeter_system.c: I think this time I finally fixed
	  the focus management in gdmgreeter so that when using the Options
	  button the focus remains in the entry.
	* gui/greeter/greeter_parser.c: Only free the hash table if it
	  is not-NULL.

2006-07-31  Brian Cameron  <brian.cameron@sun.com>

	* NEWS: Updated with 2.14.9 and 2.14.10 info.

2006-07-31  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.8:
        * NEWS: Updated.