@@ -1,3 +1,12 @@
+2006-08-08  Ray Strode <rstrode@redhat.com>
+
+	* gui/gdmwm.[ch] (gdm_wm_center_cursor): new function
+	that centers mouse pointer on one head
+
+	* gui/greeter/greeter.c (main): center cursor on main
+	xinerama head on startup (looks nicer and as a side
+	effect should fix bug 327530)
+
 2006-08-07  Brian Cameron  <brian.cameron@sun.com>
 
         * Release 2.15.9:
